--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -52,7 +52,7 @@ body {
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-.dark {
+/* .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -84,7 +84,7 @@ body {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-}
+} */
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
