--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:where(.dark, .dark *));
+/* @custom-variant dark (&:where(.dark, .dark *)); */
 
 @theme {
   --font-sans:
@@ -9,36 +9,27 @@
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
-}
-
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
+  --background: oklch(0.1906 0.0161 284.77);
+  --foreground: oklch(0.9842 0.0034 247.86);
+  --card: oklch(0.2147 0.0226 268.96);
+  --card-foreground: oklch(0.9842 0.0034 247.86);
+  /* --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0); */
+   --primary: oklch(0.7407 0.1425 159.73);
+  --primary-foreground: oklch(0.2953 0.0386 259.39);
+  --secondary: oklch(0.2953 0.0386 259.39);
+  --secondary-foreground: oklch(0.6543 0.0247 260.7);
+  --muted: oklch(0.2953 0.0158 260.7);
+  --muted-foreground: oklch(0.6543 0.0247 260.7);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
+  --destructive: oklch(0.581 0.1831 24.9);
+  --border: oklch(0.2953 0.0386 259.39);
+  --input: oklch(0.2953 0.0386 259.39);
+  --ring: oklch(0.7407 0.1425 159.73);
+  /* --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
@@ -50,7 +41,7 @@ body {
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --sidebar-ring: oklch(0.708 0 0); */
 }
 
 /* .dark {
